# makeshift

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GSL.natjmc  LICENSE.txt  README.md  TODO operators.cpp  TODO.md  azure-pipelines.yml  cpp.hint  makeshift.natjmc  makeshift.natvis  read-me.md  readme.md  stl-overrides.natvis  test.cpp  vcpkg.json
ci/: CMakeSettings.json  azure-pipelines-job-cmake.yml  azure-pipelines-linux.yml  azure-pipelines-macos.yml  azure-pipelines-windows.yml  azure-pipelines.yml  vcpkg.json  vcpkg.txt  vcpkg_x64-windows.txt
cmake/: CommonPresets.json  InstallBasicPackageFiles.cmake  MakeshiftConfig.cmake.in  TargetCompileSettings.cmake  detail_version.hpp.in  makeshiftConfig.cmake.in  version.hpp.in
extra/: InstallNatvis-VS2019.bat  makeshift.natjmc  makeshift.natvis  stl-overrides.natvis
include/makeshift/: algorithm.hpp  arithmetic.hpp  array.hpp  array2.hpp  buffer.hpp  compound.hpp  concepts.hpp  config.hpp  configuration.hpp  constexpr.hpp  constrained.hpp  constval.hpp  enum.hpp  expand.hpp  fenv.hpp  functional.hpp  functional2.hpp  hint.hpp  intrusive_ptr.hpp  iomanip.hpp  iosfwd.hpp  iostream.hpp  iterator.hpp  macros.hpp  memory.hpp  metadata.hpp  metadata2.hpp  mpark-variant.hpp  new.hpp  pointers.hpp  property.hpp  prototypes.hpp  quantity.hpp  range.hpp  ranges.hpp  reflect.hpp  reflect2.hpp  serialize.hpp  span.hpp  stdint.hpp  (+13 more)
include/makeshift/detail/: algorithm.hpp  arithmetic.hpp  array.hpp  array2.hpp  buffer.hpp  cfg.hpp  compound.hpp  constexpr.hpp  constval.hpp  copy.hpp  enum.hpp  functional.hpp  functional2.hpp  functional_comparer-reflect.hpp  functional_comparer.hpp  functional_hash.hpp  functional_operators.hpp  functional_overload.hpp  functional_traits.hpp  indices-2d.hpp  iomanip.hpp  iterator.hpp  macros.hpp  memory.hpp  meta.hpp  metadata.hpp  metadata2.hpp  prototypes.hpp  quantity-string.hpp  range-index.hpp  range.hpp  ranges.hpp  reflect.hpp  reflect2.hpp  serialize-enum.hpp  serialize.hpp  serialize_enum.hpp  serializers_hint-reflect.hpp  serializers_stream-reflect.hpp  span.hpp  (+27 more)
include/makeshift/experimental/: algorithm.hpp  buffer.hpp  configuration.hpp  contract.hpp  enum.hpp  frame.hpp  functional.hpp  pointers.hpp  property.hpp  reconf.hpp  select.hpp  span.hpp  tuple.hpp  type_traits.hpp  utility.hpp  variant.hpp
include/makeshift/experimental/detail/: buffer.hpp  enum.hpp  functional.hpp  span.hpp  tuple.hpp  utility.hpp  variant.hpp
include/makeshift/experimental/mpark/: variant.hpp
include/makeshift/mpark/: variant.hpp
include/makeshift/serializers/: bool.hpp  hint.hpp  quantity.hpp  stream.hpp  string.hpp
src/: CMakeLists.txt  compilerbug.cpp  constrained.cpp  fenv.cpp  memory.cpp  new.cpp  quantity.cpp  serialize-enum.cpp  serialize.cpp  serialize_enum.cpp  serializer_bool.cpp  serializer_quantity.cpp  serializer_stream.cpp  serializer_string.cpp  streamable-string.cpp  string.cpp  string_compare.cpp  variant.cpp  version.cpp
test/: CMakeLists.txt  _demo.cpp  demo.cpp  main-cxx17.cpp  test-algorithm.cpp  test-arithmetic.cpp  test-array.cpp  test-array2.cpp  test-buffer.cpp  test-concepts.cpp  test-constexpr.cpp  test-constval.cpp  test-enum.cpp  test-fenv.cpp  test-functional.cpp  test-iostream.cpp  test-iterator.cpp  test-memory.cpp  test-metadata.cpp  test-mpark-variant.cpp  test-new.cpp  test-quantity.cpp  test-range.cpp  test-ranges.cpp  test-reflect.cpp  test-reflect2.cpp  test-serialize.cpp  test-span.cpp  test-string.cpp  test-tuple.cpp  test-tuple2.cpp  test-type_traits.cpp  test-utility.cpp  test-utility2.cpp  test-variant-mpark.cpp  test-variant.cpp  test-variant2.cpp
test/cuda/: CMakeLists.txt
test/experimental/: test-algorithm.cpp  test-buffer.cpp  test-enum.cpp  test-functional.cpp  test-span.cpp  test-tuple.cpp  test-type_traits.cpp  test-utility.cpp  test-variant.cpp
test/mpark/: test-variant.cpp
test/tests/: metadata.cpp  test-arithmetic.cpp  test-metadata.cpp  test-pointers.cpp  test-quantity.cpp  test-reflect2.cpp  test-tuple.cpp  test-tuple2.cpp  test-types.cpp  test-utility.cpp  test-variant.cpp  test-variant2.cpp
test/tests/experimental/: test-property.cpp
tuple_test/: main.cpp  tuple.hpp
